--- a/client/index.html
+++ b/client/index.html
@@ -4,20 +4,26 @@
 	<title>GURPS Character Generator</title>
 
 	<link rel='stylesheet' href='style.css'>
+	<link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
 
 	<script src='index.js'></script>
 </head>
 <body>
 	<header>GURPS Character Generator</header>
+	<div id='options'>
+		<div class='box'>
+			<span><button id='saveCharacter'>Save</button></span>
+		</div>
+	</div>
 	<div id='character-container'>
 		<div id='character-description' class='box'>
-			<span><label>Name: </label><input type='text'></span>
-			<span><label>Player: </label><input type='text'></span>
-			<span><label>Height: </label><input type='text'></span>
-			<span><label>Weight: </label><input type='text'></span>
-			<span><label>Size Modifier: </label><input type='text'></span>
-			<span><label>Age: </label><input type='text'></span>
-			<span><label>Description: </label><textarea type='text'></textarea></span>
+			<span><label>Name: </label><input id='charName' type='text'></span>
+			<span><label>Player: </label><input id='charPlayer' type='text'></span>
+			<span><label>Height: </label><input id='charHeight' type='text'></span>
+			<span><label>Weight: </label><input id='charWeight' type='text'></span>
+			<span><label>Size Modifier: </label><input id='charSizeModifier' type='text'></span>
+			<span><label>Age: </label><input id='charAge' type='text'></span>
+			<span><label>Appearance: </label><textarea id='charAppearance'type='text'></textarea></span>
 		</div>
 		<div id='character-attributes' class='box'>
 			<div class='column'>
@@ -27,10 +33,10 @@
 			<span><label>HT</label></span>
 			</div>
 			<div class='column'>
-			<span></label><input type='text'></span>
-			<span></label><input type='text'></span>
-			<span></label><input type='text'></span>
-			<span></label><input type='text'></span>
+			<span><input id='statST' type='text'></span>
+			<span><input id='statDX' type='text'></span>
+			<span><input id='statIQ' type='text'></span>
+			<span><input id='statHT' type='text'></span>
 			</div>
 			<div class='column'>
 			<span><label>HP</label></span>
@@ -39,31 +45,30 @@
 			<span><label>FP</label></span>
 			</div>
 			<div class='column'>
-			<span></label><input type='text'></span>
-			<span></label><input type='text'></span>
-			<span></label><input type='text'></span>
-			<span></label><input type='text'></span>
+			<span><input id='statHP' type='text'></span>
+			<span><input id='statPer' type='text'></span>
+			<span><input id='statWill' type='text'></span>
+			<span><input id='statFP' type='text'></span>
+			</div>
+			<div class='column'>
+			<span></span>
 			</div>
 		</div>
 		<div id='character-advantages' class='box'>
 			<div class='title'>Advantages & Perks</div>
-			<div id='advantages' class='column'>
-			</div>
-			<div id='advantages-points' class='column'>
+			<div id='advantages' class=''>
 			</div>
 		</div>
 		<div id='character-disadvantages' class='box'>
 			<div class='title'>Disadvantages & Quirks</div>
-			<div id='disadvantages' class='column'>
+			<div id='disadvantages' class=''>
 			</div>
-			<div id='disadvantages-points' class='column'>
 			</div>
 		</div>
 		<div id='character-skills' class='box'>
 			<div class='title'>Skills</div>
-			<div id='skills' class='column'>
+			<div id='skills' class=''>
 			</div>
-			<div id='skills points' class='column'>
 			</div>
 		</div>
 	</div>
