more features more bugs

--- a/client/index.html
+++ b/client/index.html
@@ -22,7 +22,7 @@
 	</header>
 	<div id='list-container'>
 		<div class='box'>
-		<span> Existing Characters... </span>
+		<h3> Existing Characters </h3>
 		<ul id='character-list'></ul>
 		</div>
 	</div>
@@ -71,9 +71,9 @@
 			</div>
 			<div id='character-secondarystats' class='column'>
 			<span><label>Basic Lift:  </label><label id='statLift'>20</label></span>
-			<span><label>Basic Speed:  </label id='statSpeed'><label></label></span>
-			<span><label>Basic Move:  </label id='statMove'><label></label></span>
-			<span><label>Damage:  </label id='statDmg'><label></label></span>
+			<span><label>Basic Speed:  </label><label id='statSpeed'></label></span>
+			<span><label>Basic Move:  </label><label id='statMove'></label></span>
+			<span><label>Damage:  </label><label id='statDmg'></label></span>
 			</div>
 		</div>
 		<div id='character-advantages' class='box'>
@@ -87,6 +87,13 @@
 		<div id='character-skills' class='box'>
 			<div class='title'>Skills</div>
 			<div id='skills' class=''></div>
+		</div>
+		<div id='character-inventory' class='box'>
+			<div class='title'>Inventory</div>
+			<div id='meleeWeapons' class=''></div>
+			<div id='rangedWeapons' class=''></div>
+			<div id='armor' class=''></div>
+			<div id='possessions' class=''></div>
 		</div>
 	</div>
 </body>
