we can change saves, baby

--- a/client/index.html
+++ b/client/index.html
@@ -30,12 +30,13 @@
 	<div id='edit-container' style='display:none;'>
 		<div id='options'>
 			<div class='box'>
-				<button id='saveCharacter'>Save</button>
-				<button id='saveCharacter'>Save New</button>
-				<button id='clearCharacter' style='float:'>Clear</button>
+				<button id='updateCharacter'>Update</button>
+				<button id='saveNewCharacter'>Save as New</button>
+				<!--<button id='clearCharacter' style='float:'>Clear</button>-->
 			</div>
 		</div>
 		<div id='character-description' class='box'>
+			<span><label id='_id' style='display:none;'></label></span>
 			<span><label>Name: </label><input id='charName' type='text'></span>
 			<span><label>Player: </label><input id='charPlayer' type='text'></span>
 			<span><label>Height: </label><input id='charHeight' type='text'></span>
